# pythonbible-api

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml
pythonbible_api/: __init__.py  main.py
